# so

./: CMakeLists.txt  HEADER_FILES  ficha2.c  ficha2.h  main.c
Lib/: io.c  linux.h  pid.c  pid.h
docs/: Doxyfile
docs/html/: .html  call__by__string_8c.html  call__by__string_8c.js  call__by__string_8c__incl.map  call__by__string_8c__incl.md5  call__by__string_8c_source.html  dir_000002_000006.html  dir_000003_000000.html  dir_000003_000006.html  dir_000004_000000.html  dir_33ee9c9fe2e07fa5ee3ffc706ceba954.html  dir_33ee9c9fe2e07fa5ee3ffc706ceba954.js  dir_33ee9c9fe2e07fa5ee3ffc706ceba954_dep.map  dir_42cd3535a24ae5fbca69a93b204675b3.html  dir_42cd3535a24ae5fbca69a93b204675b3.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_8f3de2ae926fecfe6abd5379fd2b6eb1.html  dir_8f3de2ae926fecfe6abd5379fd2b6eb1.js  dir_92704d43009a50a66f29d12a6c87916d.html  dir_92704d43009a50a66f29d12a6c87916d.js  dir_9686ed7e47d4b7fd1f9e8d060068eded.html  dir_9686ed7e47d4b7fd1f9e8d060068eded.js  dir_9686ed7e47d4b7fd1f9e8d060068eded_dep.map  dir_9929c43acec42c84f618f445066d5d7c.html  dir_9929c43acec42c84f618f445066d5d7c.js  ficha2__2_8c.html  ficha2__2_8c.js  ficha2__2_8c__incl.map  ficha2__2_8c__incl.md5  ficha2__2_8c_source.html  ficha2__3_8c.html  ficha2__3_8c.js  ficha2__3_8c__incl.map  ficha2__3_8c__incl.md5  ficha2__3_8c_source.html  ficha2__4_8c.html  ficha2__4_8c.js  ficha2__4_8c__incl.map  (+80 more)
docs/latex/: .tex  call__by__string_8c.tex  call__by__string_8c__incl.md5  call__by__string_8c_source.tex  dir_33ee9c9fe2e07fa5ee3ffc706ceba954.tex  dir_33ee9c9fe2e07fa5ee3ffc706ceba954_dep.md5  dir_42cd3535a24ae5fbca69a93b204675b3.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_8f3de2ae926fecfe6abd5379fd2b6eb1.tex  dir_92704d43009a50a66f29d12a6c87916d.tex  dir_9686ed7e47d4b7fd1f9e8d060068eded.tex  dir_9686ed7e47d4b7fd1f9e8d060068eded_dep.md5  dir_9929c43acec42c84f618f445066d5d7c.tex  ficha2__2_8c.tex  ficha2__2_8c__incl.md5  ficha2__2_8c_source.tex  ficha2__3_8c.tex  ficha2__3_8c__incl.md5  ficha2__3_8c_source.tex  ficha2__4_8c.tex  ficha2__4_8c__incl.md5  ficha2__4_8c_source.tex  ficha2__5_8c.tex  ficha2__5_8c__incl.md5  ficha2__5_8c_source.tex  (+47 more)
(+32 files in other folders)
